Changed socketio on dashboardviews, added admin download to graphs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "date-fns": "^2.15.0",
     "emotion-theming": "^10.0.27",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
