--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
-    "date-fns": "^2.15.0",
-    "emotion-theming": "^10.0.27",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "materialize-css": "^1.0.0-rc.2",
@@ -20,8 +17,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "socket.io-client": "^2.3.0",
-    "styled-components": "^5.1.1"
+    "react-scroll": "^1.8.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
